--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <title>Document</title>
+    <link href="css/style2.css" rel="stylesheet" type="text/css" />
+    <title>menu</title>
   </head>
   <body>
     <div class="wrapper">
@@ -27,150 +28,138 @@
       <main class="main">
         <div class="container">
           <div class="main__body">
-            <div class="main__search-form">
-              <form action="" method="get">
-                <input
-                  name="s"
-                  placeholder="Поиск по ресторанам и кухням"
-                  type="search"
-                />
-              </form>
+            <div class="main__section-one">
+              <div class="section-one__item">
+                <h2>Трактир «Пушкин»</h2>
+                <h6>₽₽₽ • Европейская</h6>
+                <div class="time">40 - 50 мин</div>
+              </div>
             </div>
-            <div class="main__header"><p>Рестораны в Москве</p></div>
-            <div class="main__cards">
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo1.png" alt="" />
+            <div class="main__section-two">
+              <a href="" class="nav__item">Закуски</a>
+              <a href="" class="nav__item">Салаты</a>
+              <a href="" class="nav__item">Супы</a>
+              <a href="" class="nav__item">Горячие блюда</a>
+              <a href="" class="nav__item">Гарниры</a>
+              <a href="" class="nav__item">Десерты</a>
+            </div>
+            <div class="main__section-three">
+              <div class="section-three__header"><h4>Закуски</h4></div>
+              <div class="section-three__cards">
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo1.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Сельдь на бородинском хлебе</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6>С яйцом и огурцом</h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>240 ₽</p></div>
                     </div>
-                    <div class="item-main__title">
-                      <h5>Макдоналдс — Газетный</h5>
+                  </a>
+                </div>
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo2.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Соленья ассорти</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6></h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>320 ₽</p></div>
                     </div>
-                    <div class="item-main__subtitle"><h6>₽₽ • Бургеры</h6></div>
-                    <div class="item-main__time"><p>25 - 35 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo2.png" alt="" />
+                  </a>
+                </div>
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo3.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Грибы маринованныее</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6></h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>300 ₽</p></div>
                     </div>
-                    <div class="item-main__title">
-                      <h5>DimSum &amp Co — ЦДМ</h5>
+                  </a>
+                </div>
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo4.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Сало домашнее с горчицей</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6></h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>320 ₽</p></div>
                     </div>
-                    <div class="item-main__subtitle">
-                      <h6>₽ • Японская • Китайская • Азиатская</h6>
+                  </a>
+                </div>
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo5.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Малосольная семга</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6></h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>390 ₽</p></div>
                     </div>
-                    <div class="item-main__time"><p>40 - 50 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo3.png" alt="" />
+                  </a>
+                </div>
+                <div class="cards__column">
+                  <a href="#">
+                    <div class="cards__item">
+                      <div class="cards-item__icon">
+                        <img
+                          src="img/img2/main__section-three/photo6.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="cards-item__title">
+                        <h5>Язык говяжий с хреном</h5>
+                      </div>
+                      <div class="cards-item__subtitle">
+                        <h6></h6>
+                      </div>
+                      <div class="cards-item__pricee"><p>350 ₽</p></div>
                     </div>
-                    <div class="item-main__title">
-                      <h5>ДвижОК — Манежная</h5>
-                    </div>
-                    <div class="item-main__subtitle">
-                      <h6>₽ • Американская • Европейская</h6>
-                    </div>
-                    <div class="item-main__time"><p>35 - 45 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo4.png" alt="" />
-                    </div>
-                    <div class="item-main__title"><h5>НЯ — NHA</h5></div>
-                    <div class="item-main__subtitle">
-                      <h6>₽₽ • Вьетнамская</h6>
-                    </div>
-                    <div class="item-main__time"><p>30 - 40 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo5.png" alt="" />
-                    </div>
-                    <div class="item-main__title">
-                      <h5>Точка Дзы — Цветной</h5>
-                    </div>
-                    <div class="item-main__subtitle">
-                      <h6>₽₽ • Вьетнамская</h6>
-                    </div>
-                    <div class="item-main__time"><p>40 - 50 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-maint__icon">
-                      <img src="img/photo7.png" alt="" />
-                    </div>
-                    <div class="item-main__title"><h5>Cinnabon</h5></div>
-                    <div class="item-main__subtitle">
-                      <h6>₽ • Выпечка • Десерты • Капкейки</h6>
-                    </div>
-                    <div class="item-main__time"><p>25 - 35 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo9.png" alt="" />
-                    </div>
-                    <div class="item-main__title"><h5>PIZZELOVE</h5></div>
-                    <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
-                    <div class="item-main__time"><p>15 - 25 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo11.png" alt="" />
-                    </div>
-                    <div class="item-main__title">
-                      <h5>Zю кафе — Тверская</h5>
-                    </div>
-                    <div class="item-main__subtitle">
-                      <h6>₽₽ • Японская</h6>
-                    </div>
-                    <div class="item-main__time"><p>25 - 35 мин</p></div>
-                  </div>
-                </a>
-              </div>
-              <div class="main__column">
-                <a href="#" target="_blank">
-                  <div class="item-main">
-                    <div class="item-main__icon">
-                      <img src="img/photo10.png" alt="" />
-                    </div>
-                    <div class="item-main__title">
-                      <h5>Bar BQ Cafe — Манежная</h5>
-                    </div>
-                    <div class="item-main__subtitle">
-                      <h6>₽₽₽ • Европейская</h6>
-                    </div>
-                    <div class="item-main__time"><p>30 - 40 мин</p></div>
-                  </div>
-                </a>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
