--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="css/style2.css" rel="stylesheet" type="text/css" />
+    <link href="css/menu.css" rel="stylesheet" type="text/css" />
     <title>menu</title>
   </head>
   <body>
@@ -30,18 +30,18 @@
           <div class="main__body">
             <div class="main__section-one">
               <div class="section-one__item">
-                <h2>Трактир «Пушкин»</h2>
-                <h6>₽₽₽ • Европейская</h6>
-                <div class="time">40 - 50 мин</div>
+                <h2 class="item__title">Трактир «Пушкин»</h2>
+                <h6 class="item__subtitle">₽₽₽ • Европейская</h6>
+                <div class="item__time">40 - 50 мин</div>
               </div>
             </div>
             <div class="main__section-two">
-              <a href="" class="nav__item">Закуски</a>
-              <a href="" class="nav__item">Салаты</a>
-              <a href="" class="nav__item">Супы</a>
-              <a href="" class="nav__item">Горячие блюда</a>
-              <a href="" class="nav__item">Гарниры</a>
-              <a href="" class="nav__item">Десерты</a>
+              <a href="" class="section-two__nav-item">Закуски</a>
+              <a href="" class="section-two__nav-item">Салаты</a>
+              <a href="" class="section-two__nav-item">Супы</a>
+              <a href="" class="section-two__nav-item">Горячие блюда</a>
+              <a href="" class="section-two__nav-item">Гарниры</a>
+              <a href="" class="section-two__nav-item">Десерты</a>
             </div>
             <div class="main__section-three">
               <div class="section-three__header"><h4>Закуски</h4></div>
