added ".section-one__item "

--- a/menu.html
+++ b/menu.html
@@ -30,9 +30,17 @@
           <div class="main__body">
             <div class="main__section-one">
               <div class="section-one__item">
-                <h2 class="item__title">Трактир «Пушкин»</h2>
-                <h6 class="item__subtitle">₽₽₽ • Европейская</h6>
-                <div class="item__time">40 - 50 мин</div>
+                <div class="item__title">
+                  <h2>Трактир «Пушкин»</h2>
+                </div>
+                <div class="item__subtitle-time">
+                  <div class="item__subtitle">
+                    <h6>₽₽₽ • Европейская</h6>
+                  </div>
+                  <div class="item__time">
+                    <button class="btn"><p>40 - 50 мин</p></button>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="main__section-two">
@@ -282,4 +290,4 @@
       </footer>
     </div>
   </body>
-</html>
+</html>  
