added background in "main section one"

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="main__header"><p>Рестораны в Москве</p></div>
             <div class="main__cards">
               <div class="main__column">
-                <a href="#" target="_blank">
+                <a href="menu.html" target="_blank">
                   <div class="item-main">
                     <div class="item-main__icon">
                       <img src="img/photo1.png" alt="" />
@@ -266,10 +266,14 @@
             <div class="footer__button">
               <div class="footer__column-button">
                 <div class="footer-button__as">
-                  <a><img src="img/footer/as.png" alt="" /></a>
+                  <a href="https://www.apple.com/ru/app-store/" target="_blank"
+                    ><img src="img/footer/as.png" alt=""
+                  /></a>
                 </div>
                 <div class="footer-button__gp">
-                  <a><img src="img/footer/gp.png" alt="" /></a>
+                  <a href="https://play.google.com/" target="_blank"
+                    ><img src="img/footer/gp.png" alt=""
+                  /></a>
                 </div>
               </div>
             </div>
