--- a/menu.html
+++ b/menu.html
@@ -29,27 +29,29 @@
         <div class="container">
           <div class="main__body">
             <div class="main__section-one">
-              <div class="section-one__item">
-                <div class="item__title">
-                  <h2>Трактир «Пушкин»</h2>
-                </div>
-                <div class="item__subtitle-time">
-                  <div class="item__subtitle">
-                    <h6>₽₽₽ • Европейская</h6>
+              <div class="main__section-bacground">
+                <div class="section-one__item">
+                  <div class="item__title">
+                    <h2>Трактир «Пушкин»</h2>
                   </div>
-                  <div class="item__time">
-                    <button class="btn"><p>40 - 50 мин</p></button>
+                  <div class="item__subtitle-time">
+                    <div class="item__subtitle">
+                      <h6>₽₽₽ • Европейская</h6>
+                    </div>
+                    <div class="item__time">
+                      <button class="btn"><p>40 - 50 мин</p></button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
             <div class="main__section-two">
-              <a href="" class="section-two__nav-item">Закуски</a>
-              <a href="" class="section-two__nav-item">Салаты</a>
-              <a href="" class="section-two__nav-item">Супы</a>
-              <a href="" class="section-two__nav-item">Горячие блюда</a>
-              <a href="" class="section-two__nav-item">Гарниры</a>
-              <a href="" class="section-two__nav-item">Десерты</a>
+              <a href="#" class="section-two__nav-item">Закуски</a>
+              <a href="#" class="section-two__nav-item">Салаты</a>
+              <a href="#" class="section-two__nav-item">Супы</a>
+              <a href="#" class="section-two__nav-item">Горячие блюда</a>
+              <a href="#" class="section-two__nav-item">Гарниры</a>
+              <a href="#" class="section-two__nav-item">Десерты</a>
             </div>
             <div class="main__section-three">
               <div class="section-three__header"><h4>Закуски</h4></div>
@@ -57,114 +59,126 @@
                 <div class="cards__column">
                   <a href="#">
                     <div class="cards__item">
-                      <div class="cards-item__icon">
+                      <div class="cards-item__icon cards-item__flex-one">
                         <img
                           src="img/img2/main__section-three/photo1.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Сельдь на бородинском хлебе</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Сельдь на бородинском хлебе</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6>С яйцом и огурцом</h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>240 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6>С яйцом и огурцом</h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>240 ₽</p></div>
                     </div>
                   </a>
                 </div>
                 <div class="cards__column">
                   <a href="#">
                     <div class="cards__item">
-                      <div class="cards-item__icon">
+                      <div class="cards-item__icon cards-item__flex-one">
                         <img
                           src="img/img2/main__section-three/photo2.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Соленья ассорти</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Соленья ассорти</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6></h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>320 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6></h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>320 ₽</p></div>
                     </div>
                   </a>
                 </div>
                 <div class="cards__column">
                   <a href="#">
                     <div class="cards__item">
-                      <div class="cards-item__icon">
+                      <div class="cards-item__icon cards-item__flex-one">
                         <img
                           src="img/img2/main__section-three/photo3.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Грибы маринованныее</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Грибы маринованныее</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6></h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>300 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6></h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>300 ₽</p></div>
                     </div>
                   </a>
                 </div>
                 <div class="cards__column">
                   <a href="#">
                     <div class="cards__item">
-                      <div class="cards-item__icon">
+                      <div class="cards-item__icon cards-item__flex-one">
                         <img
                           src="img/img2/main__section-three/photo4.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Сало домашнее с горчицей</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Сало домашнее с горчицей</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6></h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>320 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6></h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>320 ₽</p></div>
                     </div>
                   </a>
                 </div>
                 <div class="cards__column">
                   <a href="#">
                     <div class="cards__item">
-                      <div class="cards-item__icon">
+                      <div class="cards-item__icon cards-item__flex-one">
                         <img
                           src="img/img2/main__section-three/photo5.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Малосольная семга</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Малосольная семга</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6></h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>390 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6></h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>390 ₽</p></div>
                     </div>
                   </a>
                 </div>
                 <div class="cards__column">
                   <a href="#">
-                    <div class="cards__item">
+                    <div class="cards__item cards-item__flex-one">
                       <div class="cards-item__icon">
                         <img
                           src="img/img2/main__section-three/photo6.png"
                           alt=""
                         />
                       </div>
-                      <div class="cards-item__title">
-                        <h5>Язык говяжий с хреном</h5>
+                      <div class="cards-item__flex-two">
+                        <div class="cards-item__title">
+                          <h5>Язык говяжий с хреном</h5>
+                        </div>
+                        <div class="cards-item__subtitle">
+                          <h6></h6>
+                        </div>
+                        <div class="cards-item__pricee"><p>350 ₽</p></div>
                       </div>
-                      <div class="cards-item__subtitle">
-                        <h6></h6>
-                      </div>
-                      <div class="cards-item__pricee"><p>350 ₽</p></div>
                     </div>
                   </a>
                 </div>
@@ -263,10 +277,14 @@
             <div class="footer__button">
               <div class="footer__column-button">
                 <div class="footer-button__as">
-                  <a><img src="img/footer/as.png" alt="" /></a>
+                  <a href="https://www.apple.com/ru/app-store/" target="_blank"
+                    ><img src="img/footer/as.png" alt=""
+                  /></a>
                 </div>
                 <div class="footer-button__gp">
-                  <a><img src="img/footer/gp.png" alt="" /></a>
+                  <a href="https://play.google.com/" target="_blank"
+                    ><img src="img/footer/gp.png" alt=""
+                  /></a>
                 </div>
               </div>
             </div>
@@ -290,4 +308,4 @@
       </footer>
     </div>
   </body>
-</html>  
+</html>
