finished the "main cards"

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="footer__body">
             <div class="footer__header">
               <div class="footer__logo">
-                <img src="img/footer/white-logo.png" alt="" />
+                <a href="#"> <img src="img/footer/white-logo.png" alt="" /> </a>
               </div>
             </div>
             <div class="footer__row">
