--- a/menu.html
+++ b/menu.html
@@ -26,10 +26,10 @@
         </div>
       </header>
       <main class="main">
-        <div class="container">
-          <div class="main__body">
-            <div class="main__section-one">
-              <div class="main__section-bacground">
+        <div class="main__body">
+          <div class="main__section-one">
+            <div class="main__section-bacground">
+              <div class="container container-section-bacground">
                 <div class="section-one__item">
                   <div class="item__title">
                     <h2>Трактир «Пушкин»</h2>
@@ -45,15 +45,21 @@
                 </div>
               </div>
             </div>
-            <div class="main__section-two">
-              <a href="#" class="section-two__nav-item">Закуски</a>
-              <a href="#" class="section-two__nav-item">Салаты</a>
-              <a href="#" class="section-two__nav-item">Супы</a>
-              <a href="#" class="section-two__nav-item">Горячие блюда</a>
-              <a href="#" class="section-two__nav-item">Гарниры</a>
-              <a href="#" class="section-two__nav-item">Десерты</a>
+          </div>
+          <div class="main__section-two">
+            <div class="container">
+              <div class="section-two__nav">
+                <a href="#" class="section-two__nav-item">Закуски</a>
+                <a href="#" class="section-two__nav-item">Салаты</a>
+                <a href="#" class="section-two__nav-item">Супы</a>
+                <a href="#" class="section-two__nav-item">Горячие блюда</a>
+                <a href="#" class="section-two__nav-item">Гарниры</a>
+                <a href="#" class="section-two__nav-item">Десерты</a>
+              </div>
             </div>
-            <div class="main__section-three">
+          </div>
+          <div class="main__section-three">
+            <div class="container">
               <div class="section-three__header"><h4>Закуски</h4></div>
               <div class="section-three__cards">
                 <div class="cards__column">
@@ -192,7 +198,9 @@
           <div class="footer__body">
             <div class="footer__header">
               <div class="footer__logo">
-                <img src="img/footer/white-logo.png" alt="" />
+                <a href="index.html">
+                  <img src="img/footer/white-logo.png" alt="" />
+                </a>
               </div>
             </div>
             <div class="footer__row">
@@ -211,17 +219,17 @@
                       </div>
                       <div class="links-footer__sending-buttons">
                         <div class="links-footer__facebook-button">
-                          <a>
+                          <a href="https://www.facebook.com/">
                             <img src="img/footer/facebook.png" alt="" />
                           </a>
                         </div>
                         <div class="links-footer__twitter-button">
-                          <a>
+                          <a href="https://twitter.com/">
                             <img src="img/footer/twitter.png" alt="" />
                           </a>
                         </div>
                         <div class="links-footer__inst-button">
-                          <a>
+                          <a href="https://www.instagram.com/">
                             <img src="img/footer/instagram.png" alt="" />
                           </a>
                         </div>
