finished the "main__section-three"

--- a/menu.html
+++ b/menu.html
@@ -72,10 +72,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Сельдь на бородинском хлебе</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6>С яйцом и огурцом</h6>
                         </div>
                         <div class="cards-item__pricee"><p>240 ₽</p></div>
@@ -93,10 +91,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Соленья ассорти</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6></h6>
                         </div>
                         <div class="cards-item__pricee"><p>320 ₽</p></div>
@@ -114,10 +110,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Грибы маринованныее</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6></h6>
                         </div>
                         <div class="cards-item__pricee"><p>300 ₽</p></div>
@@ -135,10 +129,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Сало домашнее с горчицей</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6></h6>
                         </div>
                         <div class="cards-item__pricee"><p>320 ₽</p></div>
@@ -156,10 +148,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Малосольная семга</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6></h6>
                         </div>
                         <div class="cards-item__pricee"><p>390 ₽</p></div>
@@ -177,10 +167,8 @@
                         />
                       </div>
                       <div class="cards-item__flex-two">
-                        <div class="cards-item__title">
+                        <div class="cards-item__title-subtitle">
                           <h5>Язык говяжий с хреном</h5>
-                        </div>
-                        <div class="cards-item__subtitle">
                           <h6></h6>
                         </div>
                         <div class="cards-item__pricee"><p>350 ₽</p></div>
