--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
         <div class="container">
           <div class="header__body">
             <div class="header__logo">
-              <a href="#"><img src="img/header/logo.png" alt="" /></a>
+              <a href="index.html"><img src="img/header/logo.png" alt="" /></a>
             </div>
             <div class="header__buttons">
               <button class="item-header__button-entrance"><p>Войти</p></button>
