fixed errors in "img", "menu.html" and "menu.scss"

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <div class="main__column">
                 <a href="#" target="_blank">
                   <div class="item-main">
-                    <div class="item-maint__icon">
-                      <img src="img/photo7.png" alt="" />
+                    <div class="item-main__icon">
+                      <img src="img/photo6.png" alt="" />
                     </div>
                     <div class="item-main__title"><h5>Cinnabon</h5></div>
                     <div class="item-main__subtitle">
@@ -132,7 +132,7 @@
                 <a href="#" target="_blank">
                   <div class="item-main">
                     <div class="item-main__icon">
-                      <img src="img/photo9.png" alt="" />
+                      <img src="img/photo7.png" alt="" />
                     </div>
                     <div class="item-main__title"><h5>PIZZELOVE</h5></div>
                     <div class="item-main__subtitle"><h6>₽₽ • Пицца</h6></div>
@@ -144,7 +144,7 @@
                 <a href="#" target="_blank">
                   <div class="item-main">
                     <div class="item-main__icon">
-                      <img src="img/photo11.png" alt="" />
+                      <img src="img/photo8.png" alt="" />
                     </div>
                     <div class="item-main__title">
                       <h5>Zю кафе — Тверская</h5>
@@ -160,7 +160,7 @@
                 <a href="#" target="_blank">
                   <div class="item-main">
                     <div class="item-main__icon">
-                      <img src="img/photo10.png" alt="" />
+                      <img src="img/photo9.png" alt="" />
                     </div>
                     <div class="item-main__title">
                       <h5>Bar BQ Cafe — Манежная</h5>
