--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,9 @@
                       <h6>₽₽₽ • Европейская</h6>
                     </div>
                     <div class="item__time">
-                      <button class="btn"><p>40 - 50 мин</p></button>
+                      <a href="https://www.youtube.com/watch?v=d4gYH5QLDPQ">
+                        <button class="btn"><p>40 - 50 мин</p></button>
+                      </a>
                     </div>
                   </div>
                 </div>
