--- a/menu.html
+++ b/menu.html
@@ -303,6 +303,13 @@
             </div>
           </div>
         </div>
+        <div class="button-container">
+          <a href="#">
+            <button class="button-container__btn">
+              <img src="img/arrow.png" alt="" />
+            </button>
+          </a>
+        </div>
       </footer>
     </div>
   </body>
