--- a/menu.html
+++ b/menu.html
@@ -51,12 +51,25 @@
           <div class="main__section-two">
             <div class="container">
               <div class="section-two__nav">
-                <a href="#" class="section-two__nav-item">Закуски</a>
-                <a href="#" class="section-two__nav-item">Салаты</a>
-                <a href="#" class="section-two__nav-item">Супы</a>
-                <a href="#" class="section-two__nav-item">Горячие блюда</a>
-                <a href="#" class="section-two__nav-item">Гарниры</a>
-                <a href="#" class="section-two__nav-item">Десерты</a>
+                <div class="nav__navi">
+                  <input type="checkbox" id="burger" />
+                  <label for="burger"
+                    ><img
+                      id="icon-burger"
+                      src="img/img2/section-two__nav/burger.png"
+                      alt=""
+                  /></label>
+                  <nav class="navi__nav">
+                    <ul>
+                      <li><a href="#">Закуски</a></li>
+                      <li><a href="#">Салаты</a></li>
+                      <li><a href="#">Супы</a></li>
+                      <li><a href="#">Горячие блюда</a></li>
+                      <li><a href="#">Гарниры</a></li>
+                      <li><a href="#">Десерты</a></li>
+                    </ul>
+                  </nav>
+                </div>
               </div>
             </div>
           </div>
